[package]
name = "supply-chain-security-incident-response-agent"
version = "0.2.0"
edition = "2021"
description = "scira: deployable host-side incident response agent for PyPI supply chain attacks"
license = "MIT"

[[bin]]
name = "scira"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
